pegasus/src/Pegasus/Compiler/tests/invalidMOF/InvalidPragma1.mof
// should issue invalid pragma warning message
#pragma junkname ("junkvalue")
